# redox-os

./: Cargo.toml  build.rs  通过例子学Rust
src/: consts.rs  elf.rs  lib.rs  log.rs
src/allocator/: linked_list.rs
src/arch/: mod.rs
src/arch/aarch64/: consts.rs  debug.rs  macros.rs  mod.rs  pti.rs  start.rs  stop.rs
src/arch/aarch64/device/: cpu.rs  generic_timer.rs  gic.rs  mod.rs  rtc.rs  serial.rs
src/arch/aarch64/device/cpu/: mod.rs
src/arch/aarch64/device/cpu/registers/: control_regs.rs  tlb.rs
src/arch/aarch64/init/device_tree/: mod.rs
src/arch/aarch64/init/pre_kstart/helpers/: build_page_tables.S  consts.h  post_mmu_enabled.S  vectors.S
src/arch/aarch64/interrupt/: irq.rs  mod.rs  syscall.rs  trace.rs  unhandled_exceptions.rs
src/arch/aarch64/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/arch/x86_64/: consts.rs  debug.rs  gdt.rs  idt.rs  mod.rs  rmm.rs  start.rs
src/arch/x86_64/device/: serial.rs
src/arch/x86_64/interrupt/: irq.rs  trace.rs
src/arch/x86_64/paging/: entry.rs  mapper.rs  mod.rs  table.rs  tempCodeRunnerFile.rs  temporary_page.rs
src/context/: list.rs  memory.rs  mod.rs  switch.rs
src/context/arch/: aarch64.rs
src/devices/: mod.rs  uart_16550.rs  uart_pl011.rs
src/memory/: bump.rs  mod.rs  recycle.rs
src/scheme/: debug.rs  irq.rs
src/syscall/: driver.rs  mod.rs  process.rs  validate.rs
