[package]
name = "kernel"
version = "0.1.51"
build = "build.rs"

[lib]
name = "kernel"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
bitfield = "0.13.1"
bitflags = "1.0.3"
clippy = { version = "0.0.209", optional = true }
linked_list_allocator = "0.6.2"
redox_syscall = { path = "syscall" }
slab_allocator = { path = "slab_allocator", optional = true }
spin = "0.4.8"

[dependencies.goblin]
version = "0.0.15"
default-features = false
features = ["elf32", "elf64"]

[dependencies.rustc-demangle]
version = "0.1.13"
default-features = false

[target.'cfg(target_arch = "aarch64")'.dependencies]
byteorder = { version = "1", default-features = false }
fdt = { git = "https://gitlab.redox-os.org/thomhuds/fdt.git", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = { version = "0.9.0", default-features = false }
raw-cpuid = "4.0.0"

[features]
default = []
acpi = []
doc = []
graphical_debug = []
live = []
multi_core = []
pti = []
slab = ["slab_allocator"]
